DSS-PEPPER-530-added-OSINST-logo-fix-align-center fixed

--- a/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.scss
@@ -185,7 +185,7 @@
     height: 110px;
 }
 
-.social-media-logos__img.alignCenter {
+.social-media-logo.alignCenter {
     text-align: center;
 }
 
